2001-11-03  Bart Schaefer  <schaefer@zsh.org>

	* 16215: Src/subst.c: save and restore mult_isarr in singsub()
	in case of nested substitution via getoutput().

	* 16201: Src/params.c, Src/utils.c, Src/zsh.h: introduce the
	PM_NAMEDDIR flag to mark parameters for which a value change
	should be reflected in the named directory table.

	* 16158: Src/utils.c: interpret TAB as "yes" only in spckword(),
	not in getquery() which is also used by other callers.

	* 16094: Src/compat.c: zopenmax() shouldn't return the true limit
	on the number of descriptors, as that might be a very large number
	and we really only care about the highest-numbered descriptor that
	is already open.

2001-11-02  Oliver Kiddle  <opk@zsh.org>

	* unposted: Functions/Prompts/prompt_oliver_setup,
	Doc/Zsh/prompt.yo: documentation and example for 16198

	* 16198: Src/prompt.c: add %j prompt expansion and j test
	character for putting the number of jobs in the prompt

	* 16177: Completion/Unix/Type/_time_zone: also look in
	/usr/lib/locale/TZ for time zones

2001-11-01  Bart Schaefer  <schaefer@zsh.org>

	* 16197: Completion/Zsh/Command/.distfiles,
	Completion/Zsh/Command/_limit, Completion/Zsh/Type/_limits,
	Src/Builtins/rlimits.c: `limit' accepts `unlimited' as a value.

2001-10-26  Wayne Davison  <wayned@users.sourceforge.net>

	* 16184: Src/hist.c: Improved readhistline() to reject binary data
	better.

2001-10-26  Peter Stephenson  <pws@csr.com>

	* 16176: Src/Modules/tcp.c, Src/Modules/zftp.c: after fdclose(),
	TCP control fd is no longer valid, but we still need to remove
	the session cleanly.

2001-10-26  Oliver Kiddle  <opk@zsh.org>

	* 16174: Completion/Unix/Command/_zdump,
	Completion/Unix/Type/_time_zone, Completion/Zsh/Context/_value,
	Completion/Unix/Type/.distfiles: complete value of $TZ

2001-10-26  Peter Stephenson  <pws@csr.com>

	* 16172: Src/Modules/tcp.c, Src/Modules/zftp.c: rename
	freehostent() to zfreehostent() to avoid clash with Solaris libnsl.
