@@ -1,3 +1,10 @@
+2001-11-06  Oliver Kiddle  <opk@zsh.org>
+
+	* 16224: Src/jobs.c, Doc/Zsh/builtins.yo,
+	Completion/Unix/Type/_signals, Completion/Zsh/Command/_kill,
+	Completion/Zsh/Command/_jobs_builtin: add -n option to kill
+	builtin and use _arguments in _kill to complete options
+
 2001-11-03  Bart Schaefer  <schaefer@zsh.org>
 
 	* 16215: Src/subst.c: save and restore mult_isarr in singsub()
